infra/kubernetes/infinite-buying/base/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: infinite-buying-https-redirect
  namespace: infinite-buying
spec:
  redirectScheme:
    scheme: https
    permanent: true
