infra/kubernetes/infinite-buying/base/middleware-www-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: infinite-buying-www-redirect
  namespace: infinite-buying
spec:
  redirectRegex:
    regex: ^https://www\.study-note\.yuna-pa\.com/(.*)
    replacement: https://study-note.yuna-pa.com/${1}
    permanent: true
