infra/kubernetes/infinite-buying/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infinite-buying-backend
  namespace: infinite-buying
spec:
  type: ClusterIP
  selector:
    app: infinite-buying-backend
  ports:
    - name: http
      port: 3001
      targetPort: http
