infra/kubernetes/infinite-buying/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infinite-buying-frontend
  namespace: infinite-buying
spec:
  type: ClusterIP
  selector:
    app: infinite-buying-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
