infra/kubernetes/infinite-buying/base/ingress-www.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infinite-buying-www
  namespace: infinite-buying
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: infinite-buying-infinite-buying-https-redirect@kubernetescrd,infinite-buying-infinite-buying-www-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - www.DOMAIN_PLACEHOLDER
      secretName: infinite-buying-tls-secret
  rules:
    - host: www.DOMAIN_PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infinite-buying-frontend
                port:
                  number: 80
