infra/kubernetes/infinite-buying/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infinite-buying
  namespace: infinite-buying
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: infinite-buying-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - DOMAIN_PLACEHOLDER
        - www.DOMAIN_PLACEHOLDER
      secretName: infinite-buying-tls-secret
  rules:
    - host: DOMAIN_PLACEHOLDER
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: infinite-buying-backend
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infinite-buying-frontend
                port:
                  number: 80
